✨ add: safeguard to prevent overwriting files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 *.png
 *.jpg
 *.mp4
+
+#vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
