--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-certifi==2020.6.20
-cycler==0.10.0
-decorator==4.4.2
-ImageHash==4.1.0
-imageio==2.9.0
-kiwisolver==1.2.0
-matplotlib==3.3.1
-networkx==2.5
-numpy==1.19.1
-opencv-python==4.4.0.42
-Pillow==7.2.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-PyWavelets==1.1.1
-scikit-image==0.17.2
-scipy==1.5.2
-six==1.15.0
-tifffile==2020.9.3
+kivymd==0.104.2
+Kivy==2.0.0
+natsort==7.1.1
+numpy==1.19.5
+plyer==2.0.0
+alive_progress==1.6.2
+opencv_python==4.5.3.56
+imagehash==4.2.1
+skimage==0.0
